# LC_soliton

./: .gitignore  Makefile  README.md  environment-cpu.yml  environment.yml  pyproject.toml
examples/: plot_field.py  run_theta2d.py  slurm_run_theta.sh
lc_soliton/: __init__.py  _internals.py  cli.py  lc_core.py  solver_internals.py  steady_api.py  steady_demo.py
lc_soliton/utils/: env_info.py
scripts/: Makefile.docs.addon  README_docs_snippet.md  generate_docs.py
tests/: test_basic.py
